--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <h1><font color= White>Hi There, I am Pratidnya</font color>
   <br>
 <b><font size=5><font color= Orange>Electronics And Telecommunication Engineer</b></font color></font></h1>
-<img src="C:\Users\Chinu\Desktop\prat.jpeg">
+<img src="images\prat.jpeg">
 </img>
-<body background= "C:\Users\Chinu\Desktop\images.jfif">
+<body background= "images\images.jfif">
 </body background>
 <br>
 <br>
