--- a/contact me.html
+++ b/contact me.html
@@ -13,7 +13,7 @@
   <br>
   <br>
    faceook id- Pratidnya Chavan-Sardeshmukh</p></font color></font size>
-    <body background= "C:\Users\Chinu\Desktop\images.jfif">
+    <body background= "images\images.jfif">
     </body background>
   </head>
   <body>
