--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </table>
   <br>
   <br>
-<a href="C:\Users\Chinu\Desktop\Chinu\contact me.html"><font color=Orange>contact me</font></a>
+<a href="contact me.html"><font color=Orange>contact me</font></a>
 <hr>
   </body>
 </html>
